# openclients

./: LICENSE  Makefile  README.md  setup.cfg
dataculpa/: __init__.py  validator.py
examples/api-alert-config/: DataCulpaAlertConfig.py
examples/api-run-now/: DataCulpaApiNow.py
src/dataculpa/: Makefile  validator.py
src/dataculpa_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: Makefile  basic.py  pylintrc
