[metadata]
# replace with your username:
name = dataculpa-client 
version = 0.4.1
author = Data Culpa, Inc 
author_email = hello@dataculpa.com
description = Python client for Data Culpa APIs 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Data-Culpa/openclients 
project_urls =
    Bug Tracker = https://github.com/Data-Culpa/openclients/issues 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

